# mathapp

./: .gitignore  .pre-commit-config.yaml  README.md  load_data.sh  manage.py  pyproject.toml  requirements.txt
chapters/: admin.py  apps.py  chapter_constans.py  forms.py  models.py  urls.py  views.py
chapters/fixtures/: chapters.json  topics.json
chapters/migrations/: 0001_initial.py  0002_alter_topic_is_extended.py  0002_topic.py
chapters/models/: __init__.py  chapter.py  note.py  note_element.py  topic.py
exercises/: admin.py  apps.py  exercises_constans.py  urls.py  views.py
exercises/fixtures/: exercises.json  exercises_steps_powers_sqrts.json
exercises/migrations/: 0001_initial.py  0002_step_step_unique_order_for_step_in_exercise.py  0003_exercise_order_alter_step_order_and_more.py  0003_exercise_order_step_solution_alter_step_order_and_more.py  0004_remove_step_unique_order_for_step_in_exercise_and_more.py  0005_remove_step_unique_order_for_step_in_exercise.py  0006_alter_step_order_and_more.py
exercises/models/: __init__.py  exercise.py  step.py
formulas/: admin.py  apps.py
formulas/fixtures/: formula_card_absolute_note.json  formula_card_factorial_note.json  formula_card_log_note.json  formula_card_newton_note.json  formula_card_power_note.json  formula_card_titles.json
formulas/migrations/: 0001_initial.py
landing_page/: views.py
mathapp/: asgi.py  settings.py  urls.py  wsgi.py
notes/: admin.py  apps.py  urls.py  views.py
quizzes/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
users/: forms.py  views.py
(+47 files in other folders)
